CSS: Altered the css code to show an indication of the user hitting the correct grid with a ship

--- a/css/style.css
+++ b/css/style.css
@@ -59,3 +59,13 @@ td {
   text-align: center;
   font-size: 8em;
 }
+
+.miniSub{
+  background-color: blue;
+  font-size: 1px;
+}
+
+.subHit{
+  background-color: Red;
+    font-size: 1px;
+}
