--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,16 @@ td {
   font-size: 1px;
 }
 
+.techSub{
+  background-color: green;
+  font-size: 1px;
+}
+
+.powerSub{
+  background-color: orange;
+  font-size: 1px;
+}
+
 .subHit{
   background-color: Red;
     font-size: 1px;
