--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,35 @@
 .title{
   width: 96%;
   height: 100px;
-  background-color: grey;
+  background-color: yellow;
+  background-image: url("images/scroll.png");
   padding: 30px;
   margin-top: -10px;
   margin-left: -10px;
+  text-align: center;
+  font-family: fantasy;
 }
 
 .playerInformation{
-  width: 20%;
+  width: 18%;
   height: 520px;
   float:left;
-  background-color: lightgrey;
+  background-color: orange;
   display: inline-block;
   margin-left: -10px;
+  font-family: arial;
+  text-align: center;
+  padding: 3px;
+  font-style: bold;
 
 }
 
 .mainGame{
-  width: 70%;
-  height: 520px;
+  width: 82%;
+  height: 525px;
   float: center;
-  background-color: lightblue;
   display: inline-block;
+  background-color: aqua;
   margin-right: -10px
 }
 
@@ -37,7 +44,7 @@ margin-left: -10px;
 
 .wrapper{
   width: 96%;
-  height: 520px;
+  height: 525px;
 }
 
 .footer{
