--- a/css/style.css
+++ b/css/style.css
@@ -1,35 +1,162 @@
+body{
+  background-image: url("C:/Users/TECH-W71/Documents/engineering-13/project-one/images/pirates-treasure.jpg");
+}
+
+/* input[type=text]{
+    width: 10%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+*/
+input[type=submit] {
+    width: 100%;
+    background-color: black;
+    color: white;
+    font-size: 15px;
+    padding: 5px;
+    margin: -4px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    text-align: center;
+}
+
+input[type=submit]:hover {
+    background-color: black;
+    color: orange;
+}
+
+/* div {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+}  */
+
+.modal {
+    display: block; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+    position: relative;
+    background-color: #fefefe;
+    margin: auto;
+    padding: 0;
+    border: 1px solid #888;
+    width: 80%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.4s
+}
+
+/* Add Animation */
+@-webkit-keyframes animatetop {
+    from {top:-400px; opacity:0}
+    to {top:0; opacity:1}
+}
+
+@keyframes animatetop {
+    from {top:-400px; opacity:0}
+    to {top:0; opacity:1}
+}
+
+/* The Close Button */
+.close {
+    color: white;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: orange;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.modal-header {
+    padding: 2px 16px;
+    background-color: black;
+    color: white;
+    text-align: center;
+}
+
+.modal-body {
+  padding: 2px 16px;
+  background-image: url("C:/Users/TECH-W71/Documents/engineering-13/project-one/images/pirates-treasure.jpg");
+  color: black;
+  font-size: 25px;
+  font-family: arial;
+  font-style: italic;
+  text-align: center;
+}
+
+
+.modal-footer {
+    padding: 2px 16px;
+    background-color: #5cb85c;
+    color: white;
+}
+
 .title{
   width: 96%;
   height: 100px;
-  background-color: yellow;
-  background-image: url("images/scroll.png");
-  padding: 30px;
+  padding: 40px;
   margin-top: -10px;
   margin-left: -10px;
   text-align: center;
   font-family: fantasy;
 }
 
+.table{
+  background-image: url("C:/Users/TECH-W71/Documents/engineering-13/project-one/images/cartoon-underwater.jpg");
+border: 3px solid black;
+background-repeat: no-repeat;
+background-size: cover;
+}
+
 .playerInformation{
   width: 18%;
   height: 520px;
   float:left;
-  background-color: orange;
+  background-image: url("C:/Users/TECH-W71/Documents/engineering-13/project-one/images/scroll-vertical.png");
   display: inline-block;
   margin-left: -10px;
   font-family: arial;
   text-align: center;
-  padding: 3px;
+  padding: 10px;
   font-style: bold;
+  font-size: 22px;
+  padding-top: -1px;
 
 }
 
+.playerInformation p{
+margin-bottom: 10px;
+}
+
 .mainGame{
-  width: 82%;
+  width: 75%;
   height: 525px;
   float: center;
   display: inline-block;
-  background-color: aqua;
   margin-right: -10px
 }
 
