--- a/css/style.css
+++ b/css/style.css
@@ -120,6 +120,7 @@ border-radius: 50px 20px;
     padding: 2px 16px;
     background-color: black;
     color: white;
+
     text-align: center;
 }
 
@@ -148,7 +149,7 @@ border-radius: 50px 20px;
   margin-left: -10px;
   text-align: center;
   font-family: arial;
-  text-shadow: 5px 5px grey;
+  text-shadow: 5px 5px white;
   font-size: 40px;
 }
 
@@ -165,22 +166,25 @@ background-size: cover;
   width: 18%;
   height: 520px;
   float:left;
-  background-image: url("C:/Users/TECH-W71/Documents/engineering-13/project-one/images/scroll-vertical.png");
+  background-image: url("C:/Users/TECH-W71/Documents/engineering-13/project-one/images/pirate-map.jpg");
   display: inline-block;
-  margin-left: -10px;
+  margin-left: 10px;
   font-family: arial;
   text-align: center;
-  padding: 10px;
+  padding: 20px;
   font-style: bold;
-  font-size: 22px;
+  font-size: 25px;
   padding-top: -1px;
+    text-shadow: 3px 3px white;
+  border: 3px solid black;
 
 }
 
 .playerInformation p{
 margin-bottom: 10px;
-font-size: 20px;
+font-size: 30px;
 font-style: italic;
+font-style: bold;
 }
 
 .mainGame{
@@ -227,10 +231,16 @@ td {
 
 td:hover{
     background-image: url("C:/Users/TECH-W71/Documents/engineering-13/project-one/images/cartoon-underwater.jpg");
-  -webkit-filter: saturate(7); filter: saturate(7);}
-
+  -webkit-filter: saturate(7); filter: saturate(7);
+border: 1px solid white;
+}
 .battleSub{
-  background-color: blue;
+  background-color: transparent;
+  font-size: 1px;
+}
+
+.missSub{
+  background-color: black;
   font-size: 1px;
 }
 
@@ -239,7 +249,8 @@ td:hover{
   background-color: transparent;
   background-image: url("C:/Users/TECH-W71/Documents/engineering-13/project-one/images/fire2.png");
     font-size: 1px;
-    background-size:cover;
+    background-size:contain;
+    background-repeat: no-repeat;
 }
 
 .gameOverBtn {
