--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ border-radius: 50px 20px;
     top: 0;
     width: 100%; /* Full width */
     height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
+    overflow:hidden; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
@@ -70,7 +70,7 @@ border-radius: 50px 20px;
     top: 0;
     width: 100%; /* Full width */
     height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
+    overflow:hidden; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
@@ -105,7 +105,7 @@ border-radius: 50px 20px;
 /* The Close Button */
 .close {
     color: white;
-    float: right;
+    float: center;
     font-size: 28px;
     font-weight: bold;
 }
@@ -131,8 +131,13 @@ border-radius: 50px 20px;
   color: black;
   font-size: 25px;
   font-family: arial;
-  font-style: italic;
+  font-style: bold;
   text-align: center;
+}
+
+.modal-body h3 {
+  font-size: 40px;
+    text-shadow: 2px 2px white;
 }
 
 
@@ -233,8 +238,8 @@ td {
 }
 
 td:hover{
-    background-image: url("C:/Users/TECH-W71/Documents/engineering-13/project-one/images/cartoon-underwater.jpg");
-  -webkit-filter: saturate(7); filter: saturate(7);
+    background-image: url("C:/Users/TECH-W71/Documents/engineering-13/project-one/images/animated-cannon.gif");
+    background-repeat: no-repeat;
 border: 1px solid white;
 }
 .battleSub{
