--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ border-radius: 50px 20px;
     /* visibility: hidden; /* Hidden by default */ */
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
-    padding-top: 30px; /* Location of the box */
+    padding-top: 20px; /* Location of the box */
     left: 0;
     top: 0;
     width: 100%; /* Full width */
@@ -160,16 +160,23 @@ border-radius: 50px 20px;
 }
 
 .table{
+  width: 70%;
   background-image: url("C:/Users/TECH-W71/Documents/engineering-13/project-one/images/animated-water.gif");
 border: 3px solid black;
 background-repeat: no-repeat;
 background-size: cover;
 }
 
+.image {
+  width: 10%;
+  height: 600;
+  display: inline-block;
+  margin-right: -50px;
 
+}
 
 .playerInformation{
-  width: 18%;
+  width: 20%;
   height: 520px;
   float:left;
   background-image: url("C:/Users/TECH-W71/Documents/engineering-13/project-one/images/pirate-map.jpg");
@@ -177,7 +184,7 @@ background-size: cover;
   margin-left: 10px;
   font-family: arial;
   text-align: center;
-  padding: 20px;
+  padding: 0px;
   font-style: bold;
   font-size: 25px;
   padding-top: -1px;
@@ -196,11 +203,12 @@ border: 3px solid black;
 }
 
 .mainGame{
-  width: 75%;
+  width: 60%;
   height: 525px;
   float: center;
   display: inline-block;
-  margin-right: -10px
+  /* margin-right: -10px; */
+  margin-left: -70px;
 }
 
 .picture{
@@ -213,7 +221,7 @@ margin-left: -10px;
 }
 
 .wrapper{
-  width: 96%;
+  width: 100%;
   height: 525px;
 }
 
@@ -226,7 +234,7 @@ margin-left: -10px;
 }
 
 table {
-  margin: 0 auto;
+  margin: 0px auto;
   border-radius:10px;
 }
 td {
