--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body{
   background-image: url("../images/pirates-treasure.jpg");
    cursor:url("../images/Ship-Wheel.cur"), auto;
+    overflow:hidden;
 }
 
 /* input[type=text]{
@@ -33,46 +34,42 @@ input[type=submit]:hover {
 
 .modalManual {
 
-    visibility: show;
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 80px; /* Location of the box */
+  visibility: show;
+    position: fixed;
+    z-index: 1;
+    padding-top: 80px;
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-border-radius: 50px 20px;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(100,0,0,0.4);
+    border-radius: 0px 0px;
 }
 
-#myModal2 {
-    /* visibility: hidden; /* Hidden by default */ */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 30px; /* Location of the box */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow:hidden; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+.modalWin {
+  z-index: 1;
+  padding-top: 0px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background-color: rgb(0,0,0);
+  background-color: rgba(100,0,0,0.4);
 }
 
-#myModal3 {
-    /* visibility: hidden; /* Hidden by default */ */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 20px; /* Location of the box */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow:hidden; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+.modalLoss {
+  z-index: 1;
+  padding-top: 0px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background-color: rgb(0,0,0);
+  background-color: rgba(100,0,0,0.4);
 }
 
 /* Modal Content */
@@ -138,7 +135,9 @@ border-radius: 50px 20px;
 .modal-body h3 {
   font-size: 40px;
     text-shadow: 2px 2px white;
+      margin-top: 3px;
 }
+
 
 
 .modal-footer {
@@ -154,25 +153,34 @@ border-radius: 50px 20px;
   margin-top: -10px;
   margin-left: -10px;
   text-align: center;
-  font-family: arial;
+  /* font-family: "bones";
+  src: url("font/bones-f.woff2"); */
   text-shadow: 5px 5px white;
   font-size: 40px;
 }
 
 .table{
-  width: 70%;
+    width: 80%;
   background-image: url("../images/animated-water.gif");
 border: 3px solid black;
 background-repeat: no-repeat;
 background-size: cover;
+
 }
 
-.image {
+.r-section{
   width: 10%;
   height: 600;
   display: inline-block;
   margin-right: -50px;
 
+}
+
+.image2 {
+  width: 70%;
+  height: 200;
+  display: inline-block;
+  margin-top: -40px;
 }
 
 .playerInformation{
@@ -200,15 +208,23 @@ font-size: 29px;
 font-style: italic;
 font-style: bold;
 border: 3px solid black;
+background-color: white;
 }
 
-.mainGame{
-  width: 60%;
-  height: 525px;
-  float: center;
-  display: inline-block;
-  /* margin-right: -10px; */
-  margin-left: -70px;
+.playerInformation h2{
+
+font-size: 35px;
+font-style: italic;
+font-style: bold;
+}
+
+
+.mainGame {
+    width: 60%;
+    height: 525px;
+    float: center;
+    display: inline-block;
+      margin-left: -150px;
 }
 
 .picture{
@@ -218,6 +234,20 @@ float: right;
 background-color: lightgrey;
 margin-right: -10px;
 margin-left: -10px;
+}
+
+.image img {
+    margin-bottom: -25px;
+    margin-left: -42px;
+    height: 430px;
+    padding: 0px;
+    padding-right: 0px;
+    width: 477px;
+    padding-top: 15px;
+}
+
+.image img:hover{
+
 }
 
 .wrapper{
@@ -236,6 +266,8 @@ margin-left: -10px;
 table {
   margin: 0px auto;
   border-radius:10px;
+  margin-right: -26px;
+
 }
 td {
   border: 1px solid black;
@@ -251,7 +283,7 @@ td:hover{
 border: 1px solid white;
 }
 .battleSub{
-  background-color: transparent;
+  background-color: blue;
   font-size: 1px;
 }
 
