--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ input[type=submit]:hover {
     overflow: auto;
     background-color: rgb(0,0,0);
     background-color: rgba(100,0,0,0.4);
-    border-radius:10px;
+
 }
 
 .modalWin {
@@ -60,7 +60,7 @@ input[type=submit]:hover {
   overflow: hidden;
   background-color: rgb(0,0,0);
   background-color: rgba(100,0,0,0.4);
-  border-radius:10px;
+
 }
 
 .modalLoss {
@@ -73,13 +73,13 @@ input[type=submit]:hover {
   overflow: hidden;
   background-color: rgb(0,0,0);
   background-color: rgba(100,0,0,0.4);
-  border-radius:10px;
+
 }
 
 /* Modal Content */
 .modal-content {
     position: relative;
-    background-color: #fefefe;
+    background-image: url("../images/pirates-treasure.jpg");
     margin: auto;
     padding: 0;
     border: 1px solid #888;
@@ -88,7 +88,7 @@ input[type=submit]:hover {
     -webkit-animation-name: animatetop;
     -webkit-animation-duration: 0.4s;
     animation-name: animatetop;
-    animation-duration: 0.4s
+    animation-duration: 0.4s;
     border-radius: 50px 20px;
 }
 
@@ -122,7 +122,8 @@ input[type=submit]:hover {
     padding: 2px 16px;
     background-color: black;
     color: white;
-
+    border-radius: 10px;
+border: 3px solid black;
     text-align: center;
 }
 
@@ -136,6 +137,8 @@ input[type=submit]:hover {
   font-family: cursive;
   font-style: bold;
   text-align: center;
+      border-radius: 10px;
+      border: 3px solid black;
 }
 
 .modal-body h3 {
@@ -150,6 +153,8 @@ input[type=submit]:hover {
     padding: 2px 16px;
     background-color: #5cb85c;
     color: white;
+        border-radius: 10px;
+        border: 3px solid black;
 }
 
 .title{
@@ -336,4 +341,61 @@ border: 1px solid white;
     font-size: 16px;
     margin: 4px 80px;
     cursor: pointer;
+}
+
+.popup {
+    position: relative;
+    display: inline-block;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+/* The actual popup */
+.popup .popuptext {
+    visibility: hidden;
+    width: 160px;
+    background-color: white;
+    color: black;
+    text-align: center;
+    border-radius: 6px;
+    border: 2px solid black;
+    padding: 8px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 96%;
+    left: 50%;
+    margin-left: -80px;
+}
+
+/* Popup arrow */
+.popup .popuptext::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color:white transparent transparent transparent;
+      border: 2px solid black;
+}
+
+/* Toggle this class - hide and show the popup */
+.popup:hover .popuptext {
+    visibility: visible;
+    -webkit-animation: fadeIn 1s;
+    animation: fadeIn 1s;
+}
+
+/* Add animation (fade in the popup) */
+@-webkit-keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+
+@keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity:1 ;}
 }
