--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,10 @@ input[type=submit]:hover {
 
 }
 
+.modalWin h2 {
+    margin-top: 15px;
+}
+
 .modalLoss {
   z-index: 1;
   padding-top: 0px;
@@ -74,6 +78,10 @@ input[type=submit]:hover {
   background-color: rgb(0,0,0);
   background-color: rgba(100,0,0,0.4);
 
+}
+
+.modalLoss h2 {
+    margin-top: 15px;
 }
 
 /* Modal Content */
@@ -90,6 +98,7 @@ input[type=submit]:hover {
     animation-name: animatetop;
     animation-duration: 0.4s;
     border-radius: 50px 20px;
+      font-family: pirateFont2;
 }
 
 /* Add Animation */
@@ -109,6 +118,7 @@ input[type=submit]:hover {
     float: center;
     font-size: 28px;
     font-weight: bold;
+      font-family: pirateFont2;
 }
 
 .close:hover,
@@ -125,6 +135,11 @@ input[type=submit]:hover {
     border-radius: 10px;
 border: 3px solid black;
     text-align: center;
+      font-family: pirateFont;
+}
+
+.modal-header h2{
+  margin-top: 15px;
 }
 
 .modal-body {
@@ -133,18 +148,38 @@ border: 3px solid black;
   background-repeat: no-repeat;
   background-size: cover;
   color: black;
-  font-size: 25px;
-  font-family: cursive;
+  font-size: 29px;
+  font-family: pirateFont2;
   font-style: bold;
   text-align: center;
       border-radius: 10px;
       border: 3px solid black;
 }
+.tryAgainTxt{
+  border: 3px solid black;
+  background-color: white;
+    border-radius: 10px;
+    font-style: bold;
+}
+
 
 .modal-body h3 {
-    font-size: 29px;
-    text-shadow: 2px 2px white;
-      margin-top: 3px;
+  font-size: 23px;
+      text-shadow: 2px 2px white;
+      margin-top: 4px;
+      font-family: pirateFont;
+      border: 3px solid black;
+      background-color: white;
+        border-radius: 10px;
+}
+
+.missionBrief {
+  border: 3px solid black;
+  background-color: white;
+  font-style: bold;
+  font-family: pirateFont;
+    border-radius: 10px;
+
 }
 
 
@@ -155,20 +190,28 @@ border: 3px solid black;
     color: white;
         border-radius: 10px;
         border: 3px solid black;
+          font-family: pirateFont2;
 }
 
 .title{
-  width: 96%;
+  width: 100%;
   height: 100px;
   padding: 40px 0px -20px 0px;
   margin-top: -10px;
   margin-left: -10px;
   text-align: center;
-  /* font-family: "bones";
-  src: url("font/bones-f.woff2"); */
-  text-shadow: 5px 5px white;
-  font-size: 40px;
+  font-family: pirateFont;
+  /* text-shadow: 5px 5px white; */
+  font-size: 30px;
+      margin-bottom: 32px;
+
 }
+
+.title h1 {
+  border-top: 3px solid black;
+  border-bottom: 3px solid black;
+}
+
 
 .table{
     width: 80%;
@@ -201,7 +244,6 @@ background-size: cover;
   background-image: url("../images/pirate-map.jpg");
   display: inline-block;
   margin-left: 10px;
-  font-family: arial;
   text-align: center;
   padding: 0px;
   font-style: bold;
@@ -216,9 +258,10 @@ background-size: cover;
 
 .playerInformation p{
 
-font-size: 29px;
+font-size: 32px;
 font-style: italic;
 font-style: bold;
+  font-family: pirateFont2;
 border: 3px solid black;
 background-color: white;
 }
@@ -229,6 +272,7 @@ font-size: 35px;
 font-style: italic;
 font-style: bold;
 border-bottom: 3px solid black;
+  font-family: pirateFont;
 }
 
 
@@ -398,4 +442,14 @@ border: 1px solid white;
 @keyframes fadeIn {
     from {opacity: 0;}
     to {opacity:1 ;}
+}
+
+@font-face {
+    font-family: pirateFont;
+    src: url("../font/BlackPearl.ttf");
+}
+
+@font-face {
+  font-family: pirateFont2;
+  src:url("../font/pirateFont.ttf");
 }
