--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ input[type=submit]:hover {
   visibility: show;
     position: fixed;
     z-index: 1;
-    padding-top: 80px;
+    padding-top: 30px;
     left: 0;
     top: 0;
     width: 100%;
@@ -48,6 +48,11 @@ input[type=submit]:hover {
     background-color: rgb(0,0,0);
     background-color: rgba(100,0,0,0.4);
 
+
+}
+
+.modalManual p {
+      font-size: 35px;
 }
 
 .modalWin {
@@ -77,6 +82,7 @@ input[type=submit]:hover {
   overflow: hidden;
   background-color: rgb(0,0,0);
   background-color: rgba(100,0,0,0.4);
+
 
 }
 
@@ -119,6 +125,7 @@ input[type=submit]:hover {
     font-size: 28px;
     font-weight: bold;
       font-family: pirateFont2;
+        border-radius:10px;
 }
 
 .close:hover,
@@ -385,6 +392,7 @@ border: 1px solid white;
     font-size: 16px;
     margin: 4px 80px;
     cursor: pointer;
+      border-radius:10px;
 }
 
 .popup {
