--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ input[type=submit]:hover {
 }
 
 .modalManual p {
-      font-size: 35px;
+      font-size: 37px;
 }
 
 .modalWin {
@@ -82,7 +82,7 @@ input[type=submit]:hover {
   overflow: hidden;
   background-color: rgb(0,0,0);
   background-color: rgba(100,0,0,0.4);
-
+margin-top: -22px;
 
 }
 
