--- a/css/style.css
+++ b/css/style.css
@@ -217,6 +217,7 @@ border: 3px solid black;
 .title h1 {
   border-top: 3px solid black;
   border-bottom: 3px solid black;
+  background-color: white;
 }
 
 
