--- a/css/style.css
+++ b/css/style.css
@@ -6,16 +6,6 @@ body{
     overflow:hidden;
 }
 
-/* input[type=text]{
-    width: 10%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-}
-*/
 input[type=submit] {
     width: 100%;
     background-color: black;
@@ -64,7 +54,7 @@ input[type=submit]:hover {
   height: 100%;
   overflow: hidden;
   background-color: rgb(0,0,0);
-  background-color: rgba(100,0,0,0.4);
+  background-color: rgba(100,0,0,0.0);
 
 }
 
@@ -81,7 +71,7 @@ input[type=submit]:hover {
   height: 100%;
   overflow: hidden;
   background-color: rgb(0,0,0);
-  background-color: rgba(100,0,0,0.4);
+  background-color: rgba(100,0,0,0.0);
 margin-top: -22px;
 
 }
@@ -167,6 +157,8 @@ border: 3px solid black;
   background-color: white;
     border-radius: 10px;
     font-style: bold;
+    font-family: pirateFont;
+        font-size: 24px;
 }
 
 
@@ -208,7 +200,6 @@ border: 3px solid black;
   margin-left: -10px;
   text-align: center;
   font-family: pirateFont;
-  /* text-shadow: 5px 5px white; */
   font-size: 30px;
       margin-bottom: 32px;
 
@@ -390,10 +381,11 @@ border: 1px solid white;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
+      font-size: 19px;
     margin: 4px 80px;
     cursor: pointer;
       border-radius:10px;
+          font-family: pirateFont;
 }
 
 .popup {
@@ -405,7 +397,6 @@ border: 1px solid white;
     user-select: none;
 }
 
-/* The actual popup */
 .popup .popuptext {
     visibility: hidden;
     width: 160px;
@@ -422,7 +413,6 @@ border: 1px solid white;
     margin-left: -80px;
 }
 
-/* Popup arrow */
 .popup .popuptext::after {
     content: "";
     position: absolute;
@@ -435,14 +425,12 @@ border: 1px solid white;
       border: 2px solid black;
 }
 
-/* Toggle this class - hide and show the popup */
 .popup:hover .popuptext {
     visibility: visible;
     -webkit-animation: fadeIn 1s;
     animation: fadeIn 1s;
 }
 
-/* Add animation (fade in the popup) */
 @-webkit-keyframes fadeIn {
     from {opacity: 0;}
     to {opacity: 1;}
