--- a/css/style.css
+++ b/css/style.css
@@ -27,22 +27,22 @@ input[type=submit]:hover {
 .modalManual {
 
   visibility: show;
-    position: fixed;
-    z-index: 1;
-    padding-top: 30px;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgb(0,0,0);
-    background-color: rgba(100,0,0,0.4);
+      position: fixed;
+      z-index: 1;
+      padding-top: 5px;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      overflow: auto;
+      background-color: rgb(0,0,0);
+      background-color: rgba(100,0,0,0.4);
 
 
 }
 
 .modalManual p {
-      font-size: 37px;
+      font-size: 33px;
 }
 
 .modalWin {
@@ -143,7 +143,7 @@ border: 3px solid black;
   background-size: cover;
   color: black;
   font-size: 29px;
-  font-family: pirateFont2;
+  font-family: pirateFont;
   font-style: bold;
   text-align: center;
       border-radius: 10px;
