--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,9 @@
 body{
   background-image: url("../images/pirates-treasure.jpg");
-  background-repeat: no-repeat;
+  background-repeat: repeat-y;
   background-size: cover;
    cursor:url("../images/Ship-Wheel.cur"), auto;
-    overflow:hidden;
+
 }
 
 input[type=submit] {
@@ -206,6 +206,7 @@ border: 3px solid black;
   border-top: 3px solid black;
   border-bottom: 3px solid black;
   background-color: white;
+      margin-right: -18px;
 }
 
 
@@ -215,6 +216,7 @@ border: 3px solid black;
 border: 3px solid black;
 background-repeat: no-repeat;
 background-size: cover;
+  text-align: center;
 
 }
 
@@ -227,7 +229,7 @@ background-size: cover;
 }
 
 .image2 {
-  width: 70%;
+    width: 40%;
   height: 200;
   display: inline-block;
   margin-top: -43px;
@@ -267,7 +269,8 @@ background-color: white;
 font-size: 35px;
 font-style: italic;
 font-style: bold;
-border-bottom: 3px solid black;
+background-color: white;
+border: 3px solid black;
   font-family: pirateFont;
 }
 
@@ -277,7 +280,7 @@ border-bottom: 3px solid black;
     height: 525px;
     float: center;
     display: inline-block;
-      margin-left: -150px;
+          margin-left: -133px;
 }
 
 .picture{
@@ -305,7 +308,7 @@ margin-left: -10px;
 
 .wrapper{
   width: 100%;
-  height: 525px;
+  height: 825px;
 }
 
 .footer{
@@ -320,6 +323,7 @@ table {
   margin: 0px auto;
   border-radius:10px;
   margin-right: -26px;
+  text-align: center;
 
 
 }
@@ -446,4 +450,132 @@ border: 1px solid white;
 @font-face {
   font-family: pirateFont2;
   src:url("../font/pirateFont.ttf");
+}
+
+@media screen and (min-width: 700px) and (max-width: 1111px)
+{
+
+  .mainGame {
+    width: 70%;
+  }
+
+  .playerInformation{
+    width: 20%;
+        height: 517px;
+        display: inline-block;
+        margin-top: 2px;
+              margin-left: 11px;
+}
+
+.playerInformation p {
+    font-size: 22px;
+}
+
+.playerInformation h2 {
+  font-size: 20px;
+
+}
+ table{
+  width: 100%;
+  display:inline-block;
+
+}
+
+.image2{
+  display: inline-block;
+  margin-top: 41px;
+    width: 60%;
+}
+
+.table {
+  width: 101%;
+  display:inline-block;
+  margin-left: 160px;
+  text-align: center;
+
+}
+
+.image{
+  /* width: 50%; */
+  width: 850%;
+    margin-left: -325px;
+    margin-bottom: -330px;
+
+}
+
+.title h1{
+  height: 64%;
+  font-size: 130%;
+  padding-top: 16px;
+}
+
+
+.modalManual p {
+    font-size: 22px;
+}
+}
+
+@media screen and (max-width: 700px)
+{
+
+body {
+  background-color: green;
+}
+
+.mainGame {
+  width: 93%;
+}
+
+.playerInformation{
+  width: 93%;
+  height: 270px;
+  display: inline-block;
+  margin-top: -41px;
+  margin-bottom: 20px;
+}
+
+.playerInformation p {
+      font-size: 19px;
+}
+
+.playerInformation h2 {
+font-size: 19px;
+
+}
+table{
+width: 80%;
+display:inline-block;
+
+}
+
+.image2{
+display: none;
+
+}
+
+.table {
+width: 100%;
+display:inline-block;
+    margin-left: 143px;
+text-align: center;
+
+}
+
+.image{
+
+display:inline-block;
+width: 30%;
+
+}
+
+.title h1{
+  height: 70%;
+  font-size: 80%;
+  padding-top: 6px;
+}
+
+
+.modalManual p {
+  font-size: 22px;
+}
 }
